# django-girls-workshop

./: pyproject.toml
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_list.html
mysite/: settings.py
